2003-05-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in, INSTALL, install-sh, missing, mkinstalldirs:
	update to autoconf 2.50 and automke 2.7.
	* configure.in: check for vasprintf.
	* snprintf.c: add vasprintf replacement.

	* display.c (disp_status, disp_restat): avoid fixed-size buffer.

2003-05-13  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (_ftp_update_transfer): add missing argument to
	disp_status call.
	
	* ftp.c (ftp_reconnect): _ftp_port and _ftp_user may well be NULL.

	* util.c (noalloc_basename): move basename replacement function
	here and rename; adapt callers.
	* basename.c: remove.
	* configure.in: remove test for basename(3).

2003-04-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* mkbind.c (main): fix typo resulting in undersized buffer.
	Reported by Anil Madhavapeddy.

2003-04-08  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* list.c (list_desel, list_sel): bounds check line to be
	(de)selected.  This is (neccessarily) out of bounds for empty
	list.

2003-01-29  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (_ftp_update_transfer): don't estimate time of completion
	if size is unknown; if we got more bytes than the reported size,
	discard size (it's obviously incorrect).

2002-12-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* url.c: include config.h to get USE_SFTP definition.

2002-10-23  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* readdir.c: include readdir.h for prototypes.
	* loop.c: include loop.h for prototypes.
	* fn_basic.c, fn_bind.c, fn_scroll.c, fn_select.c, fn_tag.c:
	include fntable.h for bindable function prototypes.

	* ftp.c (rftp_cwd): remove unused variable.

2002-10-10  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* main.c (main): print history if ftp_open() failes.

	* ftp.c (rftp_open, rftp_fclose, ftp_abort): allow responses
	specified in RFC.

2002-09-27  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (rftp_list, rftp_retr): allow response 125 (as per RFC).
